--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,10 @@ before_install:
   # Upgrade Docker.
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - docker build --no-cache -t "$DOCKER_USERNAME"/${}:${TRAVIS_COMMIT} .
+  - docker run --name test-container -d --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro "$DOCKER_USERNAME"/${}:${TRAVIS_COMMIT}
 
 script:
-  # Test building Dockerfile.
-  - "travis_wait 20 sleep 1000 &" # increase timeout to 20 minutes
-  - docker build -t docker-ansible .
-
-  # Test running the container.
-  - docker run --name test-container -d --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro docker-ansible
-
-  # Verify Ansible is available in the container.
   - docker exec -it test-container ansible --version
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push "$DOCKER_USERNAME"/${}:${TRAVIS_COMMIT}
