ready to merge to master

--- a/.github/workflows/build_push_to_hub.yml
+++ b/.github/workflows/build_push_to_hub.yml
@@ -2,8 +2,8 @@ name: Basic build and push to Docker hub
 
 on: 
   push:
-    #branches:
-    #  - master
+    branches:
+      - master
   repository_dispatch:
 
 jobs:
